@@ -1,3 +1,7 @@
+2020-06-20  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix rendering of modal shade color.
+
 0.28
 
 2020-05-25  Sam Varshavchik  <mrsam@courier-mta.com>
